--- a/bwhome/scss/sections/_ofertas.scss
+++ b/bwhome/scss/sections/_ofertas.scss
@@ -8,17 +8,14 @@ i.fa-solid.fa-house-chimney::before{
 }
 
 //No funciona
-.h1-title-offerts {
-    font-family: $headings-font-family;
-}
+// .h1-title-offerts {
+//     font-family: $headings-font-family;
+// }
 
-.tipos-offerts{
-    list-style:none;
-}
+// .tipos-offerts{
+//     list-style:none;
+// }
 
-.col-3.categorias-offerts{
-    text-align: center;
-}
 
 .card-img.offerts{
     text-align: center;
